k8s/base/microservices-users/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: microservices
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: microservices-users-deployment
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users
      tier: backend
  template:
    metadata:
      labels:
        app: users
        tier: backend
    spec:
      containers:
        - name: microservices-users
          image: azizzakiryarov/microservices-users:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
              protocol: TCP
