k8s/base/microservices-users/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: microservices-users
spec:
  type: LoadBalancer
  selector:
    app: users
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
